@@ -1,8 +1,8 @@
 Package: carat
 Type: Package
 Title: Covariate-Adaptive Randomization for Clinical Trials
-Version: 2.1.0
-Date: 2022-11-29
+Version: 2.2.0
+Date: 2023-04-30
 Authors@R: c(
     person(given="Fuyi", family="Tu", email="fuyi.tu@ruc.edu.cn", role="aut"),
     person(given="Xiaoqing", family="Ye", email="ye_xiaoq@163.com", role=c("aut","cre")),
@@ -22,6 +22,6 @@ Suggests: dplyr (>= 0.8.5)
 Depends: R (>= 3.6.0)
 NeedsCompilation: yes
 LinkingTo: Rcpp, RcppArmadillo
-Packaged: 2022-11-30 01:59:01 UTC; liliecnu
+Packaged: 2023-05-01 05:05:44 UTC; YeXiaoqing
 Repository: CRAN
-Date/Publication: 2022-11-30 08:20:02 UTC
+Date/Publication: 2023-05-01 06:30:02 UTC
