@@ -1,4 +1,4 @@
-49ce7c912afa34cbf7a15e762efc813d *DESCRIPTION
+9949b4404607557223622efa00a2770f *DESCRIPTION
 07ffb2370f78166edf94c672aa6372ce *NAMESPACE
 7816bf0b976fcba434f5e72726b865c7 *R/RcppExports.R
 5f9598d6c7a62d5dcb2f0a529b4dc706 *R/class_carandom.R
@@ -11,9 +11,9 @@ db9591ee475c264f3f40760314239f79 *R/class_carcomp.R
 6911e501dd4594a7e38a5a3126750d13 *R/rand_completeData.R
 5bb628ad99b81b7d9c2499108b0e425b *R/rand_evalRand.R
 a154e44176446fe360bc1aed0ff3406b *R/rand_generatingData.R
-03fab72212cbee4041dbcd7417bc999c *R/test_Rfunction.R
-d6bfb027d5e0223f70b35254c3854946 *data/pats.rda
-13f89a84e7a3dd7ed4b4d03faf24ae54 *inst/NEWS.Rd
+dc1202ec4a7255ce14e8b8881a9e0536 *R/test_Rfunction.R
+31fd3b1721d7d7b18bfcea29f08a9dbf *data/pats.rda
+8792e10279873232741cd30187394b07 *inst/NEWS.Rd
 50a1c0ef3ed558bcd1b508cb272d782e *man/AdjBCD.Rd
 6bfa34bc99378e0f1eb6d95d8e5c3c1d *man/AdjBCD.sim.Rd
 3a8ba4edf3b6e43ef2b671d89288b645 *man/AdjBCD.ui.Rd
@@ -42,8 +42,8 @@ d1231a1c4b2696fa89c2bf0a3956293f *man/compRand.Rd
 797cc82ff79fd80ef08b289808d734b2 *man/evalRand.sim.Rd
 4f3931d43815f6464f612a4761e14069 *man/getData.Rd
 3372b223028811c737abb8a9e89feaef *man/pats.Rd
-bbf32f6f2af2612fce10f9f2ab3c981c *man/rand.test.Rd
-b1a1b3f58b8fd0f295e1ed8e48f5bccc *src/InnerFun.cpp
-61059660eb073d93e00e8ee054237071 *src/Makevars
-61059660eb073d93e00e8ee054237071 *src/Makevars.win
+2285e5d9ef2742cab214d32a62072397 *man/rand.test.Rd
+49b59441660aba3a44fd2979ee91a124 *src/InnerFun.cpp
+1f399255f8d0c33b9d67db64792a50c1 *src/Makevars
+1f399255f8d0c33b9d67db64792a50c1 *src/Makevars.win
 1ac156a7fc67fdfc79a9a46171c6053e *src/RcppExports.cpp
